<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    style="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/title_top_margin"
        android:text="@string/app_title"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_description"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="40dp">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/team_top_margin"
                android:gravity="center_horizontal"
                android:text="@string/team_a_name"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/score_top_margin"
                android:gravity="center_horizontal"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="60sp" />

            <Button
                android:id="@+id/team_a_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/button_top_margin"
                android:text="@string/goal_score"
                android:textAllCaps="true"
                android:elevation="3dp"/>

            <Button
                android:id="@+id/team_a_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/button_top_margin"
                android:text="@string/pass_score"
                android:textAllCaps="true"
                android:elevation="3dp"/>

            <Button
                android:id="@+id/team_a_shoot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/button_top_margin"
                android:text="@string/shoot_score"
                android:textAllCaps="true"
                android:elevation="3dp"/>

        </LinearLayout>

        <View
            android:layout_width="1sp"
            android:layout_height="1sp"
            android:background="@android:color/darker_gray">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/team_top_margin"
                android:gravity="center_horizontal"
                android:text="@string/team_b_name"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/score_top_margin"
                android:gravity="center_horizontal"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="60sp" />

            <Button
                android:id="@+id/team_b_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/button_top_margin"
                android:text="@string/goal_score"
                android:textAllCaps="true"
                android:elevation="3dp"/>

            <Button
                android:id="@+id/team_b_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/button_top_margin"
                android:text="@string/pass_score"
                android:textAllCaps="true"
                android:elevation="3dp"/>

            <Button
                android:id="@+id/team_b_shoot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/button_top_margin"
                android:text="@string/shoot_score"
                android:textAllCaps="true"
                android:elevation="3dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/score_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/reset_score"
        android:background="@android:color/white"
        android:textAllCaps="true" />

</LinearLayout>